# QtPluginTest

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  plugintest.ui
app/base/: modbusdevicebase.cpp
app/interfaces/: devicetypes.h  imodbusdevicefactory.h  modbusdevicebase.h
plugins/: CMakeLists.txt
plugins/pressure_device/: CMakeLists.txt  pressure_device.json  pressuredevice.cpp  pressuredevice.h  pressuredevicefactory.cpp  pressuredevicefactory.h
plugins/temperature_device/: CMakeLists.txt  temperature_device.json  temperaturedevice.cpp  temperaturedevice.h  temperaturedevicefactory.cpp  temperaturedevicefactory.h
